--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -10,9 +10,9 @@
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-1 col-md-2"><div id = "p4"><div id = "p7"><div id= "p1">Chicken</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div></div></div>
-  <div class="col-lg-1 col-md-2"><div id = "p5"><div id = "p8"><div id= "p2">Beef</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div></div></div>
-  <div class="col-lg-1 col-md-3"><div id = "p6"><div id = "p9"><div id= "p3">Sushi</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.</div></div></div>
+  <div class="col-lg-1 col-md-2"><div id = "p4"><div id = "p7"><div id= "p1">Chicken</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis.</div></div></div>
+  <div class="col-lg-1 col-md-2"><div id = "p5"><div id = "p8"><div id= "p2">Beef</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis.</div></div></div>
+  <div class="col-lg-1 col-md-3"><div id = "p6"><div id = "p9"><div id= "p3">Sushi</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis.</div></div></div>
   
 </div>
 
